# ai-post-bot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  README.uk.md  alembic.ini  docker-compose.smoke.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 2026_06_08_1553-ae3f54b8147e_initial_schema.py  2026_06_08_1824-9fb12f376407_add_indexes_and_unique_source_url.py  2026_06_09_0951-c4f1a2b3d4e5_add_index_to_sources_created_at.py  2026_06_09_1210-d5e2f3a4b6c7_add_news_items_search_indexes.py
app/: main.py
app/ai/: formatting.py  generator.py  moderation.py  schemas.py
app/api/: health.py
app/core/: config.py  db.py  logging.py
app/filter/: dedup.py  keywords.py  language.py  normalize.py  service.py
app/models/: __init__.py  base.py  error_log.py  keyword.py  news_item.py  post.py  source.py
app/news_parser/: base.py  factory.py  feed.py  hashing.py  site.py  ssrf.py  telegram_reader.py
app/schemas/: common.py  error_log.py  generate.py  keyword.py  news.py  post.py  source.py
app/tasks/: celery_app.py  pipeline.py  state.py
app/telegram/: publisher.py
docs/: Project M4-1.md
scripts/: login.py  login_qr.py
tests/: conftest.py  test_config.py  test_conftest_fixtures.py  test_db.py  test_health.py  test_logging.py  test_migration_initial.py  test_model_error_log.py  test_model_keyword.py  test_model_news_item.py  test_model_post.py  test_model_source.py  test_models_base.py  test_models_registry.py
tests/ai/: conftest.py  test_formatting.py  (+3 more)
(+44 files in other folders)
