[project]
name = "m4-ai-telegram-bot"
version = "0.1.0"
description = "AI news-to-Telegram bot: collect, filter, generate, publish."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.33",
    "sqlalchemy>=2.0,<2.1",
    "alembic>=1.14,<1.15",
    "pydantic>=2.9,<3.0",
    "pydantic-settings>=2.6,<3.0",
    "celery>=5.6,<5.7",
    "redis>=5.2,<6.0",
    "openai>=1.54,<2.0",
    "aiogram>=3.21,<3.22",
    "telethon>=1.43,<1.44",
    "feedparser>=6.0,<7.0",
    "httpx>=0.27,<0.28",
    "lingua-language-detector>=2.0,<3.0",
    "pymorphy3>=2.0,<3.0",
    "pymorphy3-dicts-uk>=2.4",
    "pymorphy3-dicts-ru>=2.4",
    "structlog>=24.4,<25.0",
    "flower>=2.0,<3.0",
    "psycopg[binary]>=3.2,<4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-cov>=6.0,<7.0",
    "respx>=0.21,<0.22",
    "fakeredis>=2.26,<3.0",
    "ruff>=0.8,<0.9",
    "pre-commit>=4.0,<5.0",
]

[tool.ruff]
target-version = "py312"
exclude = ["alembic"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008", "B904"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
